fix navbar alignment problems
Former-commit-id: c7a314b732b10497369768f9c8ec22b7fbddbfa3

--- a/css/igv.css
+++ b/css/igv.css
@@ -621,9 +621,9 @@
   height: 32px;
   line-height: 32px; }
   .igv-nav-bar-left-container .igv-logo {
+    all: initial;
     width: 34px;
     height: 32px;
-    margin-top: 6px;
     margin-right: 8px; }
   .igv-nav-bar-left-container .igv-current-genome {
     height: 32px;
